--- a/mini-message-board/views/index.pug
+++ b/mini-message-board/views/index.pug
@@ -1,7 +1,19 @@
 extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+//- block content
+//-   h1= title
+//-   p Welcome to #{title}
+//-   ul(class="messages-list")
+//-     each message in messages
+//-       li 
+//-         span(class="message-text")= message.text
+//-         span(class="message-user")= message.user 
+//-         span(class="message-added")= message.added
 
-res.render('index', { title: "Mini Messageboard", messages: messages })
+block content
+  h1= "Mini Message Board"
+    p
+    each message, index in messages
+      p= messages[index].user
+      p= messages[index].text
+      p= messages[index].added
